@@ -414,6 +414,13 @@ package), B<package> is the package name, B<version> is the package's
 version, and B<file> is the package file name (absolute path
 specification).
 
+=item B<--packages-from-file> X
+
+Process the packages listed in X.  Lintian will parse each line (all
+whitespace included) as the path to a package it should process.
+
+If the file is "-", Lintian will read the packages from STDIN.
+
 =item B<-s>, B<--source>
 
 The following packages listed on the command line are source packages.
